--- a/3-index.html
+++ b/3-index.html
@@ -14,6 +14,18 @@
   </head>
   <body>
     <main>
+        <section>
+            <form action="#" method="POST" aria-labelledby="form-title" role="form">
+                <div> <label for="name">
+                    <input type="text" id="name" name="name" aria-required="true">
+                    <div>
+                        <button aria-live="polite" role="alert">
+                            
+                        </button>
+                    </div>
+                </label></div>
+            </form>
+        </section>
     <header>
       <nav>
         <a href="https://www.google.com/">"google"</a>
