--- a/0x02-tailwind-css/1-index.html
+++ b/0x02-tailwind-css/1-index.html
@@ -11,7 +11,7 @@
         <h1>Basic CSS Grid Layout</h1>
     </header>
 
-    <main>
+    <main class="grid grid-cols-3 gap-4">
         <div>Column 1</div>
         <div>Column 2</div>
         <div>Column 3</div>
