--- a/0x02-tailwind-css/1-index.html
+++ b/0x02-tailwind-css/1-index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <link rel="stylesheet" href="./output.css"> 
-    <meta charset="UTF-8">
+<script src="https://cdn.tailwindcss.com"></script>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic CSS Grid Layout</title>
 </head>
